--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Nursery rhymes'
 - !lcc 'PZ'
+- GITenberg
 title: The Adventures of the Little Woman, Her Dog and the Pedlar
 url: http://www.gutenberg.org/ebooks/22755
